	PR target/52499 	* config/avr/avr.c (avr_mode_code_base_reg_class): Change return 	type from reg_class_t to enum reg_class. 	* config/avr/avr-protos.h (avr_mode_code_base_reg_class): Ditto.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@185256 138bc75d-0d04-0410-961f-82ee72b054a4